--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Bhavesh Vaid - Software Developer Portfolio showcasing projects and skills in React, Node.js, and React Native." />
-    <meta name="keywords" content="Bhavesh Vaid, developer, software engineer, react, node.js, portfolio" />
+    <meta name="description" content="Bhavesh Vaid - Software Developer specializing in full-stack web and mobile application development." />
     <title>Bhavesh Vaid | Software Developer</title>
   </head>
   <body>
